Solved overflow issues with about me page.

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
+  overflow: auto;
   .textContainer {
     flex: 1;
     align-self: flex-end;
